lib/src/compiler/tests/testdata/errors/25.out
error[E105]: number out of range
 --> line:5:5
  |
5 |     101% of them
  |     ^^^ this number is out of the allowed range [0-100]
  |